Fix overflow

--- a/style/style.css
+++ b/style/style.css
@@ -139,26 +139,13 @@ nav {
 .pattern {
   background: url("../assets/imgs/pattern5.jpg");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: right;
   background-size: auto 100%;
   position: absolute;
   width: 100%;
   height: 55rem;
-  top: 15rem;
-  right: -50rem;
-}
-
-.pattern-bottom {
-  background: url("../assets/imgs/pattern-bottom.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: auto 100%;
-  position: absolute;
-  width: 100%;
-  height: 25rem;
-  bottom: -1rem;
-  left: -50rem;
-  z-index: -1;
+  top: 5rem;
+  z-index: -100;
 }
 
 .grid-item .cover {
